--- a/docs/style.css
+++ b/docs/style.css
@@ -13,3 +13,33 @@ p {
   text-align: center;
   color: gray;
 }
+#quiz {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #c3ecee;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(198, 222, 60, 0.2);
+}
+#question {
+  margin-bottom: 20px;
+}
+#options {
+  display: table-row;
+  gap: 10px;
+  grid-template-columns: repeat(2, 1fr);
+}
+button {
+  display: block;
+  margin: 0 auto;
+  padding: 10px 20px;
+  background-color: rgb((227, 238, 10), 245, 161);
+  color: #131313;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: "Noto Sans", sans-serif;
+}
+button:hover {
+  background-color: #8f8d8d;
+}
